Fixed Marketplace layout bugs

--- a/UI/components/ChallengesAndSolutions/styles/marketplace-for-clairvoyant-services.scss
+++ b/UI/components/ChallengesAndSolutions/styles/marketplace-for-clairvoyant-services.scss
@@ -1,12 +1,17 @@
 .marketplace-for-clairvoyant-services {
   .contentContainer {
     max-width: 994px;
+    margin-bottom: 7px;
   }
 
   .infoContainer {
     width: 100%;
     max-width: 380px;
     margin-right: 80px;
+
+    &-2 {
+      margin-left: 37px;
+    }
 
     .title {
       margin-bottom: 16px;
@@ -18,15 +23,16 @@
   }
 
   .image {
-    width: 820px;
-    height: 580px;
+    width: 898px;
+    height: 656px;
 
     &-1,
     &-3 {
-      margin-right: -300px;
+      margin-right: -336px;
+      margin-top: -30px;
 
       &::after {
-        content: "";
+        content: '';
         display: block;
         height: 100%;
         width: 325px;
@@ -50,10 +56,10 @@
 
     &-2,
     &-4 {
-      margin-left: -280px;
+      margin-left: -321px;
 
       &::after {
-        content: "";
+        content: '';
         display: block;
         height: 100%;
         width: 325px;
@@ -96,6 +102,10 @@
       max-width: 790px;
     }
 
+    .infoContainer:first-of-type {
+      margin-right: 30px;
+    }
+
     h2,
     h3 {
       color: $gray0;
@@ -108,7 +118,7 @@
       li {
         position: relative;
         &::before {
-          content: "\2022";
+          content: '\2022';
           position: absolute;
           left: 3px;
           top: -2px;
