--- a/UI/sections/CaseStudiesIntro/styles/marketplace-for-clairvoyant-services.scss
+++ b/UI/sections/CaseStudiesIntro/styles/marketplace-for-clairvoyant-services.scss
@@ -11,6 +11,7 @@
 
   [data-title] {
     max-width: 650px;
+    margin-top: 42px;
     color: $gray0;
     text-align: center;
   }
