--- a/UI/sections/ResultsSection/styles/marketplace-for-clairvoyant-services.scss
+++ b/UI/sections/ResultsSection/styles/marketplace-for-clairvoyant-services.scss
@@ -1,10 +1,14 @@
 .marketplace-for-clairvoyant-services {
   padding-bottom: 60px;
 
+  .sectionTitle {
+    margin-bottom: 22px;
+  }
+
   .circle {
     left: 0;
-    width: 994px;
-    height: 905px;
+    width: 1063px;
+    height: 973px;
     margin: 0 auto;
     transform: unset;
 
