--- a/UI/sections/SpecialChallengesAndSolutions/styles/marketplace-for-clairvoyant-services.scss
+++ b/UI/sections/SpecialChallengesAndSolutions/styles/marketplace-for-clairvoyant-services.scss
@@ -1,5 +1,6 @@
 .marketplace-for-clairvoyant-services {
-  padding-top: 60px;
+  padding-top: 4px;
+  padding-bottom: 90px;
 
   .titleStyle {
     @include phone {
